<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Math It</string>


    <!-- string values for app -->
    <string name="top">Top Score : </string>
    <string name="displayName">Math <HTML><b>It</b></HTML></string>
    <string name="last">Your Score :</string>
    <string name="timerEasy">5000</string>
    <string name="timerMedium">3000</string>
    <string name="timerHard">2000</string>
    <string name="gameOver">Game Over</string>
    <string name="shareSubject">My score is %1$d. Can you beat me?</string>
    <string name="developer_group_url">https://play.google.com/store/apps/developer?id=Creative Droids</string>
    <string name="sound_of_on">Sound: On/Off</string>
    <string name="game_info">About Game</string>
    <string name="start_game">Start Game</string>
    <string name="try_again">Try Again</string>
    <string name="home">Home</string>
    <string name="share_score">Share Score</string>
    <string name="ok">Ok</string>

    <string name="game_info_message">Simple game and improve your math skills with this app. Fun games that will pose a challenge and at the same time you will see how your results improve, you can also see your highest score. </string>

    <!-- String values for Pause dialog -->
    <string name="dialogTitle">Game Paused!</string>
    <string name="dialogTitle2">Continue?</string>
    <string name="dialogYes">Yes</string>
    <string name="dialogNo">No</string>

    <!-- String values for Rate dialog -->
    <string name="rate">Rate</string>
    <string name="rate_dialog_title">Rate Freaking Maths</string>
    <string name="rate_message">If you like Freaking Maths, please take a moment to rate it. Thanks for your support!</string>
    <string name="later">Later</string>
    <string name="no_thanks">No Thanks</string>

</resources>