<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/marginLeft"
        android:layout_marginTop="@dimen/padding"
        >
        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >

        <Button
            android:id="@+id/bsound"
            android:layout_width="@dimen/otherbuttonwidth"
            android:layout_height="@dimen/otherbuttonwidth"
            android:background="@mipmap/sound_on"
            android:onClick="clicked"
            android:layout_marginStart="25dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sound_of_on"
            android:textSize="18dp"
            android:textColor="@color/textColor"

            />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="right"
            android:layout_marginEnd="@dimen/marginLeft"
            android:layout_marginTop="6dp"

            >

            <Button
                android:id="@+id/btn_option"
                android:layout_width="@dimen/otherbuttonwidth"
                android:layout_height="@dimen/otherbuttonwidth"
                android:background="@drawable/ic_baseline_settings_24"
                android:onClick="clicked"
                android:gravity="right"

                />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/biglogo"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        />
    <TextView
        android:id="@+id/tvname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivcloud"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/displayName"
        android:textColor="@color/textColor2"
        android:textSize="@dimen/mainTextSize"

        />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvname"
        android:layout_marginTop="@dimen/marginTop"
        android:gravity="center_horizontal"
        android:orientation="vertical" >


        <Button
            android:id="@+id/bstart"
            android:layout_width="@dimen/startButtonWidth"
            android:layout_height="@dimen/startButtonWidth"
            android:background="@drawable/custom_button_play"
            android:onClick="clicked" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_game"
            android:textColor="@color/textColor"
            android:textSize="18dp"

            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="58dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/bmore"
            android:layout_width="@dimen/startButtonWidth"
            android:layout_height="@dimen/startButtonWidth"
            android:background="@drawable/custom_button_more"
            android:onClick="clicked" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_info"
            android:textColor="@color/textColor"
            android:textSize="18dp"

            />




    </LinearLayout>

    <ImageView
        android:id="@+id/ivcloud"
        android:layout_width="@dimen/rightButtonWidth"
        android:layout_height="@dimen/rightButtonWidth"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/linearLayout1"
        android:layout_marginRight="@dimen/padding"
        android:layout_marginTop="@dimen/marginTop"
        android:visibility="invisible"
        android:background="@mipmap/cloud" />




</LinearLayout>